--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.2",
     "dotenv": "^16.0.0",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
