--- a/app/package.json
+++ b/app/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^1.2.0",
     "@sendgrid/mail": "^7.6.2",
     "dotenv": "^16.0.0",
     "react": "^17.0.2",
@@ -26,6 +27,8 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.6.0",
     "postcss": "^8.4.8",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23",
     "vite": "^2.8.0"
   }
