--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.0",
     "react-share": "^4.4.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
