--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": true,
   "version": "0.0.0",
+  "homepage": ".",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
@@ -10,11 +11,15 @@
   "dependencies": {
     "@metamask/detect-provider": "^1.2.0",
     "@sendgrid/mail": "^7.6.2",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "dotenv": "^16.0.0",
+    "firebase": "^9.6.9",
+    "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.0",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-share": "^4.4.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
@@ -31,6 +36,7 @@
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23",
-    "vite": "^2.8.0"
+    "vite": "^2.8.0",
+    "vite-plugin-pwa": "^0.11.13"
   }
 }
