--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.2",
     "@metamask/detect-provider": "^1.2.0",
     "@sendgrid/mail": "^7.6.2",
     "body-scroll-lock": "^4.0.0-beta.0",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.28.0",
     "react-lazy-load-image-component": "^1.5.1",
     "react-share": "^4.4.0",
+    "react-spinners": "^0.11.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
