Added new features

--- a/app/package.json
+++ b/app/package.json
@@ -9,31 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@loadable/component": "^5.15.2",
     "@metamask/detect-provider": "^1.2.0",
-    "@sendgrid/mail": "^7.6.2",
     "body-scroll-lock": "^4.0.0-beta.0",
     "dotenv": "^16.0.0",
-    "firebase": "^9.6.9",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.28.0",
-    "react-lazy-load-image-component": "^1.5.1",
+    "react-query": "^3.34.18",
     "react-share": "^4.4.0",
     "react-spinners": "^0.11.0",
+    "swiper": "^8.0.7",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@openzeppelin/contracts": "^4.5.0",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
-    "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.6.0",
+    "cypress": "^9.5.3",
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
