--- a/app/package.json
+++ b/app/package.json
@@ -17,10 +17,12 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.18",
+    "react-router-dom": "^6.3.0",
     "react-share": "^4.4.0",
     "react-spinners": "^0.11.0",
-    "swiper": "^8.0.7",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "swiper": "^8.1.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
